# driftjs

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
demo/: app.v1.js  app.v2.js
driftjs/: analyze.py  banner.py  cli.py  curl.py  cve.py  explain.py  extract.py  fetch.py  graphql.py  headers.py  libraries.py  probe.py  rank.py  report.py  routes.py  secrets.py  snapshot.py  sourcemap.py  subdomains.py  watch.py  wayback.py  weaknesses.py
tests/: test_driftjs.py
